# multi-agent-pyserver

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
app/: main.py
app/api/: auth.py  routes_agents.py  routes_attachments.py  routes_executions.py  routes_subtasks.py  routes_tasks.py  routes_users.py  routes_workflows.py  serialization.py
app/core/: config.py  enums.py  mock_llm.py  model_client.py  models.py
app/data/: agents.json  users.json  workflows.json
app/planners/: base.py  crewai_planner.py  factory.py  llm_planner.py
app/services/: agent_profile_builder.py  artifact_service.py  attachment_parser.py  completion_service.py  file_uri.py  (+7 more)
docs/: API接口文档.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: seed_bugfix_workflow.py  seed_lifecycle_agents.py
taskhub-codex-runner/: README.md  config.example.json  runner_cli.py  start_runner.sh  taskhub_codex_runner.py  test_taskhub_codex_runner.py
tests/: conftest.py  test_agents.py  test_api_privacy.py  test_artifacts.py  test_attachments.py  test_completion_service.py  test_cors.py  test_database_storage.py  test_deliverable_materializer.py  test_execution_service.py  test_main.py  test_model_client.py  test_planners.py  test_repository_secrets.py  test_safe_defaults.py  test_seed_bugfix_workflow.py  test_seed_lifecycle_agents.py  test_subtask_identity.py  test_task_graph.py  test_task_rerun.py  test_tasks.py  test_tool_executor.py  test_users.py  test_workflows.py
(+93 files in other folders)
