[project]
name = "multi-agent-pyserver"
version = "0.1.0"
description = "API-only MVP for a multi-agent task collaboration hub"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=1.2.0",
    "PyMySQL>=1.1.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "SQLAlchemy>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
crewai = [
    "crewai==1.15.2",
    "litellm>=1.91.3",
]
test = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
